# HelloBeauty

./: .gitignore  Dockerfile  README.md  package.json  pyproject.toml  tsconfig.base.json
apps/mini/src/: app.config.ts  app.tsx
apps/mini/src/components/swipe-card/: index.tsx  swipe-card.css
apps/mini/src/pages/edit/: index.tsx
apps/mini/src/pages/retouch/: index.tsx
apps/mini/src/pages/shoot/: index.tsx
apps/mini/src/pages/swipe/: index.tsx  swipe.css
apps/mini/src/utils/: api.ts  editorial.ts  retouch-categories.ts  use-local-image.ts
apps/web/app/: globals.css  layout.tsx  marketing.css  motion-effects.tsx  page.tsx
backend/: app.py
backend/api/: assets.py  auth.py  authz.py  models.py  photos.py  recipes.py  render.py  sessions.py
backend/jesr/: feedback.py  metric_control.py  orchestrator.py  recipe_trace.py  translator.py
backend/providers/: base.py  jesr_creative.py  jesr_fidelity.py
backend/services/: ingress.py  session_store.py  storage.py
scripts/: start_backend.sh
tests/: test_architecture.py  test_backend_api.py  test_frontend_asset_paths.py  test_gallery_contracts.py  test_model_adapters.py  test_model_distribution.py  test_real_metric_experiment_script.py
