[project]
name = "hellobeauty"
version = "0.1.0"
description = "HelloBeauty JESR portrait retouch platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112",
  "httpx>=0.27",
  "numpy>=1.26",
  "Pillow>=10.0",
  "pydantic>=2.8",
  "pytest>=8.0",
  "python-multipart>=0.0.20",
  "uvicorn>=0.30"
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "packages/jesr_core"
]
testpaths = ["tests"]

[tool.setuptools]
packages = []
